[gd_scene load_steps=11 format=2]

[ext_resource path="res://addons/godot-behavior-tree-plugin/behavior_tree.gd" type="Script" id=2]
[ext_resource path="res://addons/godot-behavior-tree-plugin/blackboard.gd" type="Script" id=3]
[ext_resource path="res://src/Sensors/AttackRangeSensor.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Controllers/EnemyController.gd" type="Script" id=7]
[ext_resource path="res://src/Sensors/FloorSensor.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/Sensors/WallSensor.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/Sensors/DamageBox.tscn" type="PackedScene" id=14]
[ext_resource path="res://src/Sensors/EdgeSensor.tscn" type="PackedScene" id=16]
[ext_resource path="res://src/player_v3/health/Health.tscn" type="PackedScene" id=20]
[ext_resource path="res://src/Effects/Particles/BloodSplatter.tscn" type="PackedScene" id=24]

[node name="Enemy" type="KinematicBody2D" groups=[
"enemy",
]]
collision_layer = 4
collision_mask = 1024
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 9 )

[node name="Health" parent="." instance=ExtResource( 20 )]
max_health = 2

[node name="Sprite" type="Sprite" parent="."]

[node name="BloodSplatter" parent="Sprite" instance=ExtResource( 24 )]

[node name="FloorSensor" parent="Sprite" instance=ExtResource( 11 )]
position = Vector2( 0, 27 )

[node name="WallSensor" parent="Sprite" instance=ExtResource( 12 )]
position = Vector2( 0, 8 )
height = 18.0
gap = 18.0
length = 24.0

[node name="AttackRangeSensor" parent="Sprite" instance=ExtResource( 5 )]
MAX_RANGE = 40.0
MIN_RANGE = 12.0

[node name="LineOfSight" type="Area2D" parent="Sprite"]
collision_layer = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sprite/LineOfSight"]
polygon = PoolVector2Array( 0, 0, 1344, -408, 1344, 384 )

[node name="DamageBox" parent="Sprite" instance=ExtResource( 14 )]
visible = true
collision_layer = 131072

[node name="Hitbox" type="Area2D" parent="Sprite"]
collision_layer = 0
collision_mask = 262144

[node name="EdgeSensor" parent="Sprite" instance=ExtResource( 16 )]
position = Vector2( 12, 25 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="BehaviorBlackboard" type="Node" parent="."]
script = ExtResource( 3 )

[node name="BehaviorTree" type="Node" parent="."]
script = ExtResource( 2 )

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="PatrolTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="health_changed" from="Health" to="." method="_on_health_changed"]
[connection signal="health_depleted" from="Health" to="." method="_on_health_depleted"]
[connection signal="body_entered" from="Sprite/LineOfSight" to="." method="_on_LineOfSight_body_entered"]
[connection signal="body_exited" from="Sprite/LineOfSight" to="." method="_on_LineOfSight_body_exited"]
